<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Zilche</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_text" translatable="false">Zilche</string>
    <string name="search_hint">Search Zilche</string>
    <string name="categories">CATEGORIES</string>
    <string name="newest_posts">NEWEST</string>
    <string name="popular_posts">POPULAR</string>
    <string name="title_activity_search_list" translatable="false">SearchList</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="category_all">ALL</string>
    <string name="category_auto">AUTOMOBILE</string>
    <string name="category_education">EDUCATION</string>
    <string name="category_entertainment">ENTERTAINMENT</string>
    <string name="category_food">FOOD</string>
    <string name="category_fashion">FASHION</string>
    <string name="category_finance">FINANCE</string>
    <string name="category_games">GAMES</string>
    <string name="category_it">I.T</string>
    <string name="category_pet">PETS</string>
    <string name="category_science">SCIENCE</string>
    <string name="category_social">SOCIAL</string>
    <string name="category_sports">SPORTS</string>
    <string name="category_travel">TRAVEL</string>
    <string name="category_tech">TECHNOLOGY</string>
    <string name="portfolio_text">Sign up / Log in</string>
    <string name="portfolio_email">User Email</string>
    <string name="drawer_open" translatable="false">Open Navigation</string>
    <string name="drawer_close" translatable="false">Close Navigation</string>
    <string name="title_activity_my_poll" translatable="false">MyPollActivity</string>
    <string name="title_activity_create_poll" translatable="false">CreatePoll</string>
    <string name="title_activity_tmp_new_poll" translatable="false">tmpNewPoll</string>
    <string name="title_activity_signup" translatable="false">signupActivity</string>

    <string name="title_activity_retrieve_profile" translatable="false">RetrieveProfileActivity</string>
    <string name="existing_user">EXISTING USER</string>
    <string name="new_user">NEW USER</string>
    <string name="title_activity_upload_image" translatable="false">UploadImage</string>
    <string name="or">OR</string>
    <string name="login_with_zilche">Log in with Zilche</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_last_name">First and last name</string>
    <string name="sign_up_with_zilche">Sign Up with Zilche</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="password_too_short">Password must contain at least 6 characters</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="fl_name">Please enter your first and last name</string>
    <string name="title_activity_full_screen_image" translatable="false">FullScreenImage</string>
    <string name="facebook_app_id">1086189198071072</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pw_text">The instructions to reset your password will be sent to this email.</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="connection_err">Error connecting to server. Please try again later.</string>
    <string name="no_email">Email address is not registered.</string>
    <string name="email_sent">Instructions to reset your password has been sent to your email address.</string>
    <string name="title_activity_category" translatable="false">CategoryActivity</string>
    <string name="title_activity_achart_engine_pie_chart" translatable="false">AChartEnginePieChartActivity</string>
    <string name="category_all_2">All Posts</string>
    <string name="category_auto_2">Automobile</string>
    <string name="category_education_2">Education</string>
    <string name="category_entertainment_2">Entertainment</string>
    <string name="category_food_2">Food</string>
    <string name="category_fashion_2">Fashion</string>
    <string name="category_finance_2">Finance</string>
    <string name="category_games_2">Games</string>
    <string name="category_it_2">I.T</string>
    <string name="category_pet_2">Pets</string>
    <string name="category_science_2">Science</string>
    <string name="category_social_2">Social</string>
    <string name="category_sports_2">Sports</string>
    <string name="category_travel_2">Travel</string>
    <string name="category_tech_2">Technology</string>
    <string name="title_activity_poll_view" translatable="false">PollViewActivity</string>
    <string name="title_activity_pie_chart" translatable="false">PieChart</string>
    <string name="title_activity_bar_chart" translatable="false">BarChart</string>
    <string name="title_activity_create_survey" translatable="false">CreateSurvey</string>
    <string name="title_activity_popular" translatable="false">PopularActivity</string>
    <string name="other">Other</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_add_survey_options" translatable="false">AddSurveyOptions</string>
    <string name="title_activity_create_poll_activity2" translatable="false">CreatePollActivity2</string>
    <string name="title_activity_crop_image" translatable="false">CropImageActivity</string>
    <string name="title_activity_my_profile" translatable="false">MyProfileActivity</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="title_activity_create_comment" translatable="false">CreateCommentActivity</string>
    <string name="connection_failed">Connection failed</string>
    <string name="anonymous">Anonymous</string>
    <string name="comment_err">Comment should not be empty</string>
    <string name="upload_comment">Uploading comment</string>
    <string name="new_poll">New Poll</string>
    <string name="options">Options</string>
    <string name="Category">Categories</string>
    <string name="take_photo">Take photo</string>
    <string name="gallery">Choose from gallery</string>
    <string name="select_image">Select Image (Optional)</string>
    <string name="image_loading">Image is still loading&#8230;</string>
    <string name="question_empty">Question should not be empty</string>
    <string name="click_button_view_image">Click button again to view image</string>
    <string name="maximum_10">You reached the maximum of 10 options</string>
    <string name="option_empty">Option should not be empty</string>
    <string name="two_options">You should provide at least 2 options</string>
    <string name="creating_poll">Creating poll</string>
    <string name="create_success">Create poll successful</string>
    <string name="image_small">Image is too small</string>
    <string name="crop_image">Crop Image?</string>
    <string name="confirm">Confirm</string>
    <string name="discard_image">Discard Image?</string>
    <string name="delete_confirm">Delete Confirmation</string>
    <string name="delete_confirm_2">Do you really want to delete this poll?</string>
    <string name="delete">Delete</string>
    <string name="comment_2">Comment</string>
    <string name="try_again">Please try again later.</string>
    <string name="close">Close</string>
    <string name="day_ago">day ago</string>
    <string name="days_ago">days ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="minute_ago">1 minute ago</string>
    <string name="reload">Reload</string>
    <string name="submit">Submit</string>
    <string name="my_polls">My Polls</string>
    <string name="comment_0">Comment 0</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="enter_question">Enter your question here</string>
    <string name="post_anon">Post as Anonymous</string>
    <string name="sort_popular">Sort by Popularity</string>
    <string name="sort_date">Sort by Date</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="email_taken">Email address is already taken</string>
    <string name="title_activity_edit_profile" translatable="false">EditProfileActivity</string>
    <string name="logging_in">Logging in to your account</string>
    <string name="signing_up">Signing up</string>
    <string name="title_activity_favourite" translatable="false">FavouriteActivity</string>
    <string name="image_load_err">Something went wrong. Please select your image from the gallery.</string>
    <string name="unspecified">unspecified</string>
    <string name="invalid_date">Invalid birth date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="activity">Activity</string>
    <string name="profile_dont_exist">User profile does not exist</string>
    <string name="browse_zilche">Browse Zilche</string>
    <string name="my_poll">My Polls</string>
    <string name="my_profile">My Profile</string>
    <string name="Fav">Favourite</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_info">Personal Information</string>
    <string name="intro">Intro</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="contact_info">Contact Information</string>
    <string name="login_signup">Login/Sign Up</string>
    <string name="saving">Saving</string>
    <string name="edit_intro">Edit intro</string>
    <string name="input_name">Please enter your name</string>
    <string name="title_activity_reply_comment" translatable="false">ReplyCommentActivity</string>
    <string name="reply">Reply</string>
    <string name="set_email">Set email</string>
</resources>
