<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="14sp"
        android:singleLine="true"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="sans-serif-medium"
        android:singleLine="true"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_marginTop="30dp"
        android:text="@string/login_with_zilche"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:background="@drawable/login_button"
        android:textColor="#fff"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/or"
        android:textSize="14sp"
        android:textColor="#44000000"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_fb_btn"
        android:layout_marginTop="40dp"
        android:text="@string/login_with_facebook"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:background="@drawable/login_button"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_pw"
        android:fontFamily="sans-serif-medium"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:textColor="#44000000"/>

</LinearLayout>