<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:background="#303F9F"
        android:textColor="#ffffffff"
        android:text="@string/forgot_password"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reset_pw_text"
        android:textSize="12sp"
        android:textColor="#aaaaaa"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="14sp"
        android:singleLine="true"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/reset_email"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:clickable="true"
            android:paddingTop="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="15dp"
            android:textColor="#aa303F9F"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/cancel_reset"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:clickable="true"
            android:paddingTop="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="15dp"
            android:textSize="14dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#aa303F9F"
            android:id="@+id/reset_password" />

    </LinearLayout>

</LinearLayout>