<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#00ccff"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:textColor="#00ccff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:text="@string/password"
        android:textColor="#00ccff"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:textColor="#00ccff"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/txtemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/email"
        android:textColor="#00ccff"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:textColor="#00ccff"
        android:textSize="20dp" />


    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="@string/signup"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="47dip"
        android:paddingRight="47dip"
        android:background="@drawable/login_button"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@drawable/button_text"/>/>

</RelativeLayout>