<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="#eee"
            />

        <LinearLayout
            android:layout_gravity="center_vertical|bottom"
            android:gravity="center_vertical|bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <FrameLayout
                android:layout_margin="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/anon_54"
                    android:id="@+id/image_pi"
                    android:padding="6dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/corners_white"/>

            </FrameLayout>

            <TextView
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:paddingBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:textColor="#555"
                android:maxLines="2"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:ems="3"
                android:ellipsize="end"
                android:id="@+id/name_pi"/>

        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:background="#eee"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:text="@string/personal_info"
            android:textColor="#555"
            android:fontFamily="sans-serif-medium"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eee"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999"
                android:text="@string/intro"
                android:minEms="3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/intro_pi"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eee"/>


        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999"
                android:text="@string/age"
                android:minEms="3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unspecified"
                android:id="@+id/age_pi"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eee"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999"
                android:text="@string/gender"
                android:minEms="3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unspecified"
                android:id="@+id/gender_pi"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eee"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999"
                android:text="@string/country"
                android:minEms="3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unspecified"
                android:id="@+id/country_pi"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eee"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999"
                android:text="@string/birthday"
                android:minEms="3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unspecified"
                android:id="@+id/bday_pi"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:background="#eee"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:text="@string/contact_info"
            android:textColor="#555"
            android:fontFamily="sans-serif-medium"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eee"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999"
                android:text="@string/email"
                android:minEms="3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unspecified"
                android:id="@+id/email_pi"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#eee"/>


    </LinearLayout>

</ScrollView>